# sqlite_protobuf

./: CMakeLists.txt  LICENSE  README.md  conanfile.txt
.github/workflows/: build.yml  cmake-multi-platform.yml
examples/: AddressBook.sqlite  README.md
src/: extension_main.cpp  main.cpp  protobuf_extract.cpp  protobuf_extract.h  protobuf_foreach.cpp  protobuf_foreach.h  protobuf_json.cpp  protobuf_json.h  protodec.cpp  protodec.h  sqlite_protobuf.h
test/: test_protodec.cpp  test_sqlite.py
